syntax = "proto3";

package pool;

service Registry {
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
}

message RegisterNodeRequest {
  string node_id = 1;
  string specialization = 2;
  string endpoint = 3;
  string org = 4;
  bool private_node = 5;
}

message RegisterNodeResponse {
  bool success = 1;
  string message = 2;
}

message HeartbeatRequest {
  string node_id = 1;
}

message HeartbeatResponse {
  bool alive = 1;
}

message ListNodesRequest {
  string specialization = 1;
  string org = 2;
}

message ListNodesResponse {
  repeated NodeInfo nodes = 1;
}

message NodeInfo {
  string node_id = 1;
  string specialization = 2;
  string endpoint = 3;
  string org = 4;
  bool private_node = 5;
  string status = 6;
}
